--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -197,10 +197,10 @@ http://ionicframework.com/docs/theming/ */
    */
 
   .md body {
-    --ion-background-color: #121212;
+    --ion-background-color: #F8F8F8;
     --ion-background-color-rgb: 18,18,18;
 
-    --ion-text-color: #ffffff;
+    --ion-text-color: #000000;
     --ion-text-color-rgb: 255,255,255;
 
     --ion-border-color: #222222;
@@ -225,12 +225,12 @@ http://ionicframework.com/docs/theming/ */
     --ion-color-step-900: #e7e7e7;
     --ion-color-step-950: #f3f3f3;
 
-    --ion-item-background: #1e1e1e;
+    --ion-item-background: #FFFFFF;
 
-    --ion-toolbar-background: #1f1f1f;
+    --ion-toolbar-background: #FFFFFF;
 
-    --ion-tab-bar-background: #1f1f1f;
+    --ion-tab-bar-background: #FFFFFF;
 
-    --ion-card-background: #1e1e1e;
+    --ion-card-background: #FFFFFF;
   }
 }
