--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -4,20 +4,20 @@ http://ionicframework.com/docs/theming/ */
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #3880ff;
-  --ion-color-primary-rgb: 56, 128, 255;
+  --ion-color-primary: #FE5E37;
+  --ion-color-primary-rgb: rgb(254, 94, 55);
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  --ion-color-primary-shade: #ec4f28;
+  --ion-color-primary-tint: #fc6a46;
 
   /** secondary **/
-  --ion-color-secondary: #3dc2ff;
-  --ion-color-secondary-rgb: 61, 194, 255;
+  --ion-color-secondary: #142F54;
+  --ion-color-secondary-rgb: rgb(20, 47, 84);
   --ion-color-secondary-contrast: #ffffff;
   --ion-color-secondary-contrast-rgb: 255, 255, 255;
-  --ion-color-secondary-shade: #36abe0;
-  --ion-color-secondary-tint: #50c8ff;
+  --ion-color-secondary-shade: #142F54;
+  --ion-color-secondary-tint: #23416b;
 
   /** tertiary **/
   --ion-color-tertiary: #5260ff;
@@ -83,19 +83,21 @@ http://ionicframework.com/docs/theming/ */
    */
 
   body {
-    --ion-color-primary: #428cff;
-    --ion-color-primary-rgb: 66,140,255;
+    /** primary **/
+    --ion-color-primary: #FE5E37;
+    --ion-color-primary-rgb: rgb(254, 94, 55);
     --ion-color-primary-contrast: #ffffff;
-    --ion-color-primary-contrast-rgb: 255,255,255;
-    --ion-color-primary-shade: #3a7be0;
-    --ion-color-primary-tint: #5598ff;
+    --ion-color-primary-contrast-rgb: 255, 255, 255;
+    --ion-color-primary-shade: #ec4f28;
+    --ion-color-primary-tint: #fc6a46;
 
-    --ion-color-secondary: #50c8ff;
-    --ion-color-secondary-rgb: 80,200,255;
+    /** secondary **/
+    --ion-color-secondary: #142F54;
+    --ion-color-secondary-rgb: rgb(20, 47, 84);
     --ion-color-secondary-contrast: #ffffff;
-    --ion-color-secondary-contrast-rgb: 255,255,255;
-    --ion-color-secondary-shade: #46b0e0;
-    --ion-color-secondary-tint: #62ceff;
+    --ion-color-secondary-contrast-rgb: 255, 255, 255;
+    --ion-color-secondary-shade: #142F54;
+    --ion-color-secondary-tint: #23416b;
 
     --ion-color-tertiary: #6a64ff;
     --ion-color-tertiary-rgb: 106,100,255;
@@ -185,7 +187,7 @@ http://ionicframework.com/docs/theming/ */
   }
 
   .ios ion-modal {
-    --ion-background-color: var(--ion-color-step-100);
+    --ion-background-color: #F8F8F8;
     --ion-toolbar-background: var(--ion-color-step-150);
     --ion-toolbar-border-color: var(--ion-color-step-250);
   }
